--- a/css/index.css
+++ b/css/index.css
@@ -26,31 +26,6 @@ body {
     width: 250px;
 }
 
-/* .welcome {
-    display: flex;
-    align-items: center;
-    width: 800px;
-    height: 130px;
-    padding-top: 20px;
-    padding-left: 30px;
-    font-family: 'Smash';
-}
-
-.welcome div:first-child {
-    flex-basis: 60%;
-    text-align: end;
-    padding-right: 20px;
-    font-size: 50px;
-}
-
-.welcome div:last-child {
-    flex-basis: 40%;
-}
-
-.welcome div:last-child img {
-    width: 80%;
-} */
-
 form {
     display: flex;
     flex-direction: column;
@@ -116,5 +91,35 @@ section {
     border-bottom-left-radius: var(--radius);
     border-bottom: var(--border);
     border-left: var(--border);
-    background: rgba(0, 0, 0, 1);
+    background: black;
+}
+
+@media screen and (max-width: 580px) {
+    section {
+        position: static;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        background: none;
+    }
+
+    .logo, form {
+        margin-block: 20px;
+    }
+
+    .logo {
+        position: static;
+    }
+
+    form {
+        background: rgba(0, 0, 0, 0.7);
+        border-radius: 10%;
+        border: 3px solid white;
+        width: min-content;
+        height: auto;
+        padding: 30px;
+    }
 }
